<resources>
    <string name="app_name">Paker Tymer</string>

    <!-- Tabs -->
    <string name="tab_saved">Saved</string>
    <string name="tab_timer">Timer</string>
    <string name="tab_settings">Settings</string>
    
    <!-- Tournament items -->
    <string name="default_tournament">Default Tournament</string>

    <string name="d_levels_d_minutes" formatted="false" >%d levels (%d minutes each)</string>
    <string name="blinds_d_d" formatted="false" >Starting blinds: %d - %d</string>

    <!-- New Tournament Activity -->
    <string name="new_tournament">New Tournament</string>
    <string name="save">Save</string>
    <string name="choose_preset">Choose preset</string>
    <string name="duration">Duration</string>
    <string name="small_blind">S.blind</string>
    <string name="big_blind">B.blind</string>
    <string name="ante">Ante</string>
    <string name="tournament_name">Tournament name</string>
    <string name="fill_name">Please fill in the name of the tournament</string>
    <string name="tournament_created">Tournament created</string>

</resources>
